# django-tasks

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  run.sh
app/: models.py  urls.py  views.py
app/static/: styles.css
app/templates/: base.html  login.html  main.html  registration.html  tasks.html
django_tasks/: asgi.py  settings.py  urls.py  wsgi.py
